# playoracle-backend

./: .gitignore  .render-deploy  create_users_prod.py  fly.toml  pyproject.toml
app/: config.py  database.py  main.py
app/ml/: prediction_engine.py
app/models/: database.py
app/routers/: admin_events.py  ai_analytics.py  analytics.py  auth.py  boxing.py  cricket.py  cycling.py  events.py  golf.py  history.py  hockey.py  leaderboard.py  live_data.py  mma.py  motogp.py  nascar.py  predictions.py  rivalry.py  rugby.py  sports.py  sports_intel.py  subscriptions.py  tabletennis.py  tennis.py  user.py  volleyball.py
app/schemas/: auth.py  predictions.py
app/services/: balldontlie.py  collegefootballdata.py  cricket_intel.py  cycling_intel.py  dci_service.py  ergast.py  footballdata.py  golf_intel.py  hockey_intel.py  mma_intel.py  motogp_intel.py  nascar_intel.py  pandascore_client.py  rugby_intel.py  sportradar_client.py  sports_intel.py  sportsdata_client.py  tabletennis_intel.py  tennis_intel.py  thesportsdb.py  thesportsdb_client.py  volleyball_intel.py
app/services/providers/: __init__.py  thesportsdb_client.py
app/utils/: auth.py
